--- a/src/Components/ContentfirstPage/MainSlider/mainSlider.scss
+++ b/src/Components/ContentfirstPage/MainSlider/mainSlider.scss
@@ -6,4 +6,27 @@
     justify-content: center;
     align-items: center;
     font-weight: 700;
+  
+}
+.sliderFram{
+    // background-color: aqua;
+    min-height: 500px;
+    height: 100%;
+}
+.slider-imgs{
+    width: 100%;
+    height: 400px !important;
+}
+.sliderTitle{
+    position: absolute;
+    bottom: 170px;
+    color: aliceblue;
+    background-color: black;
+    left: 50px;
+    letter-spacing: 2px;
+    border-radius: 2px;
+    padding: 5px;
+    opacity: 80%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
