--- a/src/Components/ContentfirstPage/MainSlider/mainSlider.scss
+++ b/src/Components/ContentfirstPage/MainSlider/mainSlider.scss
@@ -1,32 +1,45 @@
 .main-frame-slider{
+  
     
-    min-height: 530px;
-    background-color: rgba(128, 128, 128, 0.192);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 700;
+   
   
 }
 .sliderFram{
-    // background-color: aqua;
-    min-height: 500px;
+   
     height: 100%;
+    
 }
 .slider-imgs{
     width: 100%;
-    height: 400px !important;
+    min-height: 400px !important;
 }
 .sliderTitle{
     position: absolute;
-    bottom: 170px;
+    bottom: 150px;
     color: aliceblue;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.438);
     left: 50px;
-    letter-spacing: 2px;
-    border-radius: 2px;
-    padding: 5px;
-    opacity: 80%;
+    letter-spacing: 1px;
+    border-radius: 10px;
+    padding: 10px;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
+}
+.slider-descript{
+    position: relative;
+    bottom: 100px;
+    background-color: rgba(0, 0, 0, 0.534);
+    left: 2rem;
+    padding: 5px 10px;
+    width: 70%;
+    display: inline-block;
+    color: aliceblue;
+    font-weight: 800;
+    font-size: .75rem;
+    border-radius: 5px;
+    line-height: 27px;
+
+    
+   
 }
