--- a/src/Pages/PlayGameStyles/PlayGame-Style.scss
+++ b/src/Pages/PlayGameStyles/PlayGame-Style.scss
@@ -1,8 +1,8 @@
 .Main-Container{
-    min-height: 400px;
-    background-color: gray;
+    min-height: 550px;
+    background-color: rgb(151, 122, 122);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
 
 }
