--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -8,8 +8,8 @@
 }
 
 .CityCol{
-    width: 70px;
-    height: 300px;
+    width: 17%;
+    height: 340px;
     background-color: rgb(34, 34, 56);
     display: flex;
     flex-direction: column;
@@ -31,9 +31,10 @@
     border: 1px solid rgba(0, 0, 0, 0.192);
     box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.247);
     border-radius: 10px;
-    width: 100px;
+    width: 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    font-size: 7px !important;
 }
