move-cityes list

--- a/src/Pages/PlayGameStyles/PlayGame-Style.scss
+++ b/src/Pages/PlayGameStyles/PlayGame-Style.scss
@@ -1,8 +1,7 @@
 .Main-Container{
-    min-height: 550px;
+    min-height: 450px;
     background-color: rgb(151, 122, 122);
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    padding-top: 50px;
+   
 
 }
