--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -8,21 +8,24 @@
 }
 
 .CityCol{
-    width: 17%;
-    height: 340px;
+    width: 15%;
+    height: 300px;
+    overflow: hidden;
     background-color: rgb(34, 34, 56);
     display: flex;
-    flex-direction: column;
-    border-radius: 5px;
+    flex-direction: column-reverse;
+    border-radius: 4px;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
 
     p{
         color: aliceblue;
-        border-bottom: 1px solid rgba(255, 0, 0, 0.322);
+        border-bottom: 1px solid rgba(255, 0, 0, 0.842);
         font-size: 12px;
         text-align: center;
-        width: 70%;
+      
         margin: auto;
+        padding-top: 20px;
+        padding-bottom: 5px;
     }
    
 
