--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -20,9 +20,9 @@
     p{
         color: aliceblue;
         border-bottom: 1px solid rgba(255, 0, 0, 0.842);
-        font-size: 12px;
+        font-size: 10px;
         text-align: center;
-      
+        width: 90%;
         margin: auto;
         padding-top: 20px;
         padding-bottom: 5px;
