--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -1,15 +1,25 @@
+.Play-Container{
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+
+
 .cityCol-Container{
     width: 90%;
     margin: auto;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
    
 
 }
 
 .CityCol{
-    width: 15%;
-    height: 300px;
+    width: 20%;
+    height: 105px;
     overflow: hidden;
     background-color: rgb(34, 34, 56);
     display: flex;
@@ -19,17 +29,30 @@
 
     p{
         color: aliceblue;
-        border-bottom: 1px solid rgba(255, 0, 0, 0.842);
+        border-bottom: 1px solid rgba(255, 0, 0, 0.555);
         font-size: 10px;
         text-align: center;
-        width: 90%;
+        width: 99%;
         margin: auto;
-        padding-top: 20px;
-        padding-bottom: 5px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        // padding: 10px 0px 1px;
     }
    
 
 }
+
+.playButtons-container{
+  min-height: 150px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+
 .PlayBtn{
     border: 1px solid rgba(0, 0, 0, 0.192);
     box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.247);
