--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
+@font-face {
+  font-family: 'iranS';
+  src: url('../src//Fonts//A-Iranian-Sans/Iranian\ Sans.ttf');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'iranS';
+
 }
+P,span{
+  font-family: 'iranS';
+  
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
