--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -71,6 +71,7 @@
         span{
             font-weight: 600;
             font-size: 13px;
+            display: block;
         }
         
     }
