--- a/src/Components/GetUserInfo/get/user-style.scss
+++ b/src/Components/GetUserInfo/get/user-style.scss
@@ -106,6 +106,7 @@ input{
       margin-top: 19px;
         color: aliceblue;
         text-shadow: 0 0 10px yellow;
+         
     }
     .listCityforSelect-container{
         display: flex;
@@ -126,6 +127,7 @@ input{
             font-size: 13px;
             font-family: 'iranS';
             text-shadow: 0 0 10px yellow;
+            
         }
 
         span{
@@ -182,12 +184,15 @@ font-size: 10px !important;
 @media only screen and (max-width: 1200px)   {
    
     #City-Cells{
-        background-color: rgb(41, 11, 11);
+        background-color: rgb(255, 65, 65);
         width: 70px;
         height: 30px;
-        font-size: 8px;
+        
+        font-size: 9px;
         color: aliceblue;
         font-weight:900;
-        padding-top: 5px;
+       display: flex;
+       justify-content: center;
+       align-items: center;
     }
 }
