--- a/src/Components/GetUserInfo/get/user-style.scss
+++ b/src/Components/GetUserInfo/get/user-style.scss
@@ -4,10 +4,10 @@
     position: absolute;
     background-color: rgba(92, 56, 56, 0.897);
     width: 90%;
-    min-height: 550px;
+    min-height: 400px;
     margin: auto;
-    top: 40px;
-    left:4rem;
+    top: 52px;
+    
     border-radius: 10px;
     z-index: 5;
     display: flex;
@@ -15,10 +15,11 @@
     align-items: center;
     justify-content: flex-start;
     border-radius: 5px;
+
     left: 0; 
-  right: 0; 
-  margin-left: auto; 
-  margin-right: auto; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
 
 
 
@@ -27,14 +28,14 @@
 }
 @media only screen and (max-width: 1200px) and (min-width: 500px)  {
     .GetUserInfo-Container{
-        background-color: rgba(92, 56, 56, 0.897);
+        background-color: rgba(92, 56, 56, 0.842);
         
         border-radius: 10px;
-        box-shadow: 0 0 15px black;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.616);
         left: 0; 
-  right: 0; 
-  margin-left: auto; 
-  margin-right: auto; 
+        right: 0; 
+        margin-left: auto; 
+        margin-right: auto; 
         
 
     }
@@ -53,6 +54,7 @@
         padding-top: 20px;
         padding-bottom: 10px;
         text-shadow: 0 0 10px yellow;
+        font-weight:900;
 
     }
     p{
@@ -96,7 +98,7 @@ input{
 }
 .cityNamePicker-Container{
     width: 90%;
-  
+    margin-top: 25px;
     
     span.forEnter{
        
@@ -115,6 +117,7 @@ input{
         align-items: center;
         flex-wrap: wrap;
         flex-basis: auto;
+        
        
         .City-Cells{
             background-color: rgba(235, 34, 34, 0.815);
@@ -151,15 +154,15 @@ input{
           
             
             @keyframes cityAnima {
-                from {color: rgb(255, 255, 0)}
-                to {color: rgb(0, 0, 0);}
+                from {color: rgb(255, 255, 0);text-shadow: 0 0 5px black;}
+                to {color: rgb(0, 0, 0);font-size: 10px;}
             }
 
         }
         span.Cityselected{ 
             font-size: 15px;
             font-weight: 900;
-            animation: ease alternate infinite cityAnima 1s;
+            animation: ease-in-out alternate infinite cityAnima .75s;
 
         }
     }
@@ -170,12 +173,23 @@ input{
 
 
 .btnsPicker-Container{
-height: 40px;
 
 text-align: center;
-padding: 5px 1px;
+
 font-family: 'iranS';
-font-size: 10px !important;
+
+.sendBtn {
+    font-size: 12px !important;
+    font-weight: 800;
+    span{
+        display: block;
+        font-size: 12px;
+        direction: rtl
+        
+
+    }
+    
+};
 }
 
 
