--- a/src/Components/GameRules/GameRules-style.scss
+++ b/src/Components/GameRules/GameRules-style.scss
@@ -9,8 +9,8 @@
 .showRules{
    
     width: 90%;
-    min-height: 450px;
-    background-color: rgba(10, 5, 54, 0.842);
+    min-height: 550px;
+    background-color: rgba(10, 5, 54, 0.863);
     position: absolute;
     z-index: 1;
     top: 75px;
@@ -30,12 +30,15 @@
 }
 
 .rulesTexts-Container{
-
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: flex-end;
     .rulesText-title{
         text-align: center;
         color: white;
         width: 100%;
-        height: 100px;
+        height: 70px;
         // background-color: gray;
         display: flex;
         justify-content: center;
@@ -44,7 +47,7 @@
     }
     .rulesText-detail-container{
         height: 250px;
-        // background-color: blueviolet;
+        
         display: flex;
         flex-direction: column;
         
@@ -52,6 +55,17 @@
         color: aliceblue;
         align-items: end;
         padding: 15px 30px;
+        ul{
+            list-style: circle;
+            direction: rtl;
+        }
+        p{
+            margin-top: 0;
+            margin-bottom: 1rem;
+            text-align: right;
+            font-size: 12px;
+        }
+        
     }
    
     }
@@ -64,8 +78,9 @@
         align-items: center;
         padding: 10px 0px;
         font-family: 'iranS';
-        bottom: {
-            font-size: 12px
+        margin-top: 50px;
+        button: {
+            font-size: 12px !important;
         };
         
     span{
