--- a/src/Pages/PlayGameStyles/PlayGame-Style.scss
+++ b/src/Pages/PlayGameStyles/PlayGame-Style.scss
@@ -1,6 +1,6 @@
 .Main-Container{
     min-height: 550px;
-    background-color: rgb(195, 176, 228);
+    background: url('../../Imgs/Background/Nature.jpg') center center;
     padding-top: 5px;
     display: flex;
     flex-direction: column;
