--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -41,9 +41,9 @@
 .showMess{     
     position: absolute;
     transition:  2s  all ease 7s;
-    top: 60px;
+    top: 100px;
     left: 40px;
-    background-color: rgb(150, 67, 67);
+    background-color: rgb(54, 34, 34);
     width: 100px;
     height: 50px;
     color: white;
@@ -60,7 +60,7 @@
     position: absolute;
     width: 100px;
     height: 50px;
-    top: -900px;
+    top: -1300px;
     left: 40px;
     transition:  2s  all ease 0s;
 
@@ -197,7 +197,61 @@
     transition: all ease 1s;
 }
 
+.PlayBtn{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: rgb(74, 38, 233);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    transition: all ease 1s;
+    .PlayIcon{
+        font-size: 40px;
+        margin-left: 3px;
+    }
+}
+.repeatBtn{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: rgb(158, 250, 0);
+    margin-top: 50px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    transition: all ease 1s;
+}
+.ExitBtn{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: rgb(255, 30, 0);
+    
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    outline: 0;
+    border: 0;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    transition: all ease 1s;
+   
+    span{
+        color: white;
+        font-size: 13px;
+        padding-bottom: 5px;
+    }
+    
 
+
+}
 
 
 
