--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -130,38 +130,49 @@
 
 
 .cityCol-Container{
-    width: 90%;
+    width: 99%;
     margin: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-   
+    justify-content: center;
+//    background-color: red;
    
 
 }
 
 
 .CityCol{
-    width: 15%;
-    height: 130px;
+    width: 25%;
+    height: 240px;
     overflow: hidden;
-    background-color: rgb(34, 34, 56);
     display: flex;
     flex-direction: column-reverse;
-    border-radius: 4px;
+     border-radius: 2px;
     
+    margin: 0 1px;
+    background-color: #d7ddff;
+    .City-Cells{
+        height: 80px;
+        font-size: 20px;
+       
+        
+        
+    }
     
    
 
     p{
-        color: aliceblue;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.555);
-        font-size: 0.5rem;
+        color: rgb(0, 0, 0);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.555);
+        font-size: 0.8rem;
+        font-weight: 900;
         text-align: center;
-        width: 99%;
+       
         margin: auto;
-        padding-top: 13px;
-        padding-bottom: 10px;
+        // padding-top: 13px;
+        // padding-bottom: 10px;
+        min-height: 39px;
+       
        
 
         // padding: 10px 0px 1px;
@@ -182,7 +193,7 @@
 
 
 .PlayBtn{
-    border: 1px solid rgba(0, 0, 0, 0.192);
+    // border: 1px solid rgba(0, 0, 0, 0.192);
     box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.247);
     border-radius: 10px;
     width: 10%;
