--- a/src/Pages/PlayGameStyles/PlayGame-Style.scss
+++ b/src/Pages/PlayGameStyles/PlayGame-Style.scss
@@ -1,7 +1,7 @@
 .Main-Container{
-    min-height: 602px;
+    min-height: 672px;
     background: url('../../Imgs/Background/Nature.jpg') center center;
-    
+    background-size: cover;
     padding-top: 5px;
     display: flex;
     flex-direction: column;
