--- a/src/Components/GameRules/GameRules-style.scss
+++ b/src/Components/GameRules/GameRules-style.scss
@@ -9,7 +9,7 @@
 .showRules{
    
     width: 100%;
-    min-height: 620px;
+    min-height: 670px;
     background-color: rgba(10, 5, 54, 0.945);
     position: absolute;
     z-index: 1;
@@ -66,7 +66,8 @@ align-items: flex-end;
             margin-top: 0;
             margin-bottom: 1rem;
             text-align: right;
-            font-size: 12px;
+            font-size: 14px;
+            text-align: right;
         }
         
     }
@@ -79,7 +80,7 @@ align-items: flex-end;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 10px 0px;
+        padding: 50px 0px;
         font-family: 'iranS';
         margin-top: 190px;
         button: {
