--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'iranS';
+  content-visibility: auto;
+ 
 
 }
 P,span{
@@ -15,7 +17,4 @@ P,span{
 }
 
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
