--- a/src/Pages/GameSource/Components/IranGift/iranGift-style.scss
+++ b/src/Pages/GameSource/Components/IranGift/iranGift-style.scss
@@ -1,9 +1,9 @@
 .iranGift-container{
     direction: rtl;
-    width: 70%;
+    width: 100%;
     margin: auto;
-    left: 20%;
-    height: 600px;
+    
+    min-height: 700px;
     background-color: yellow;
     position: absolute;
     z-index: 10;
