--- a/src/Pages/PlayGameStyles/PlayGame-Style.scss
+++ b/src/Pages/PlayGameStyles/PlayGame-Style.scss
@@ -1,12 +1,12 @@
 .Main-Container{
     min-height: 672px;
-    background: url('../../Imgs/Background/Nature.jpg') center center;
+    background-color: rgb(54, 34, 34);
     background-size: cover;
     padding-top: 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    filter: brightness(120%);
+   
    
 
 }
