--- a/src/Pages/GameSource/Components/ListOfCity-Style.scss
+++ b/src/Pages/GameSource/Components/ListOfCity-Style.scss
@@ -7,24 +7,9 @@
 
    
 }
-// .GameInfo-container{
-   
-   
-  
-    
-    
-    
-
-
-   
-    
-// }
-
 .gameMessages-Container{
     font-size: 14px;
     background-color: red;
-  
-    
     p{
        
         padding: 10px;
@@ -34,85 +19,57 @@
     }
 
 }
-.showMess{     
-    position: absolute;
-    transition:  2s  all ease 7s;
-    bottom: 140px;
-    right: 30px;
-    background-color: rgb(54, 34, 34);
-    width: 200px;
-    height: 150px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: black 0px 0px 20px;
-    border-radius: 10px;
-    font-size: 40px;
-    z-index: 101;
-}
-.notshowMess{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 200px;
-    height: 150px;
-    bottom: -1300px;
-    right: 30px;
-    transition:  2s  all ease 1s;
-    z-index: 101;
 
-}
+
 .userInfo-Container{
  
 //    border: 2px solid black;
    width: 100%;
-   direction: rtl;
+
 // padding-bottom: 80px;
    
 }
-
+////Main Div For Buttons Game!!!!!!!!!!!!!!!!!!!
 .PlayerInfo-Container{
    width: 90%;
    margin: auto;
-   background-color: rgba(141, 110, 110, 0.555);
-   border-radius: 5px;
-   box-shadow: 0px 0px 20px white;
-   color: antiquewhite;
+   background-color: rgb(53, 32, 32);
+   border-radius: 3px;
+   box-shadow: 0px 0px 20px rgb(0, 0, 0);
+  
     // border: 1px solid rgb(105, 0, 0);
     // margin-bottom: 30px;
     display: flex;
     flex-direction: row;
    align-items: center;
-   justify-content: space-between;
+   justify-content: space-around;
 
-    .PlayerNameContainer{
-        padding: 8px;
-        // margin-bottom: 10px;
-        // background-color: rgb(74, 104, 131);
-        span{
-            font-weight: 600;
-            font-size: 13px;
-            // display: block;
-            // margin-bottom: 5px;
-        }
+    // .PlayerNameContainer{
+    //     padding: 8px;
+    //     // margin-bottom: 10px;
+    //     // background-color: rgb(74, 104, 131);
+    //     span{
+    //         font-weight: 600;
+    //         font-size: 13px;
+    //         // display: block;
+    //         // margin-bottom: 5px;
+    //     }
         
-    }
+    // }
    
-    .rateContainer{
-        width: 100px;
-        padding-right: 5px;
-       text-align: right;
-       font-size: 15px;
-       span.rateDisplay{
-        font-size: 12px;
-        font-weight: 800;
-        background-color: red;
+    // .rateContainer{
+    //     width: 100px;
+    //     padding-right: 5px;
+    //    text-align: right;
+    //    font-size: 15px;
+    //    span.rateDisplay{
+    //     font-size: 12px;
+    //     font-weight: 800;
+    //     background-color: red;
 
 
-    }
-    }
+    // }
+    // }
 
 }
 .junContainer{
@@ -125,6 +82,7 @@
    
     span{
         font-size: 30px;
+        filter: drop-shadow(0px 0px 8px yellow);
     }
     
 }
@@ -160,9 +118,6 @@
       width: 100%;
         background-color: red;
         align-items: center;
-        // background-image: url('../Data//Imgs//Nature.jpg') ;
-        // background-size: cover;
-        // background-position: center;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -179,7 +134,7 @@
        }
  
         p{
-        //    position: absolute;
+
            
            
             color: white;
@@ -217,252 +172,28 @@
     
    
 
-    // p{
-    //     color: rgb(0, 0, 0);
-    //     border-bottom: 1px solid rgba(0, 0, 0, 0.555);
-    //     font-size: 0.8rem;
-    //     font-weight: 900;
-    //     text-align: center;
-      
-    //     margin: auto;
-    //     // padding-top: 13px;
-    //     // padding-bottom: 10px;
-    //     min-height: 39px;
-    //     z-index: 100;
-       
-       
-
-    //     // padding: 10px 0px 1px;
-    // }
+   
    
 
 }
 
 
-.playButtons-container{
-//   min-height: 150px;
-    display: flex;
-    flex-direction: row;
-    // margin-top: 10px;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row-reverse;
-
-}
 
 
-.PlayBtn{
-    // border: 1px solid rgba(0, 0, 0, 0.192);
-    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.247);
-    border-radius: 10px;
-    width: 10%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 7px !important;
-}
-.jun{
-    margin-left: 5px;
-    transition: all ease 1s;
-}
-
-.PlayBtn{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: rgb(74, 38, 233);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    box-shadow: 0px 0px 10px rgb(0, 0, 0);
-    transition: all ease 1s;
-    .PlayIcon{
-        font-size: 40px;
-        margin-left: 3px;
-    }
-}
-.repeatBtn{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: rgb(158, 250, 0);
-    // margin-top: 50px;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    box-shadow: 0px 0px 10px rgb(0, 0, 0);
-    transition: all ease 1s;
-}
-.ExitBtn{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: rgb(255, 30, 0);
-    
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    outline: 0;
-    border: 0;
-    box-shadow: 0px 0px 10px rgb(0, 0, 0);
-    transition: all ease 1s;
-   
-    span{
-        color: white;
-        font-size: 13px;
-        padding-bottom: 5px;
-    }
-    
 
 
-}
 
 
-.showMaskTop{
-    position: absolute;
-    transition:  2s  all ease 5s ;
-    top: -10px;
-    background-color: rgb(53, 32, 32);
-    width: 100%;
-    height: 200px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    box-shadow: black 0px 0px 20px;
-    border-radius: 10px;
-   
-    p{
-        font-size: 28px;
-        margin: 0 2px;
-        background-color: gray;
-        border-radius: 5px;
-       margin:10px 20px;
-       padding: 10px;
-       text-align: center;
-    }
-}
-.notShowMaskTop{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 100%;
-    height: 250px;
-    top: -250px;
-    background-color: rgba(53, 32, 32, 0.493);
-    transition:  2s  all ease 2s;
-    // z-index: 100;
-    p{
-        font-size: 28px;
-        margin: 0 2px;
-        background-color: gray;
-        border-radius: 5px;
-       margin:10px 20px;
-       padding: 10px;
-       text-align: center;
-    }
-}
-.showMaskBottom{
-    position: absolute;
-    transition:  1s  all ease ;
-    bottom: 105px;  
-    background-color: rgb(53, 32, 32);
-    width: 100%;
-    height: 250px;
-    // z-index: 200;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    box-shadow: black 0px 0px 20px;
-    border-radius: 10px;
-    font-size: 30px;
-    color: aliceblue;
-    padding-left: 100px;
-    p{
-        font-size: 30px;
-        margin: 0 2px;
-       
-        border-radius: 5px;
-        
-       
-    }
 
-}
-.notShowMaskBottom{
-    position: absolute;
-    transition:  2s  all ease 2s ;
-    bottom: -300px;  
-    background-color: rgb(53, 32, 32);
-    width: 100%;
-    height: 250px;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    box-shadow: black 0px 0px 20px;
-    border-radius: 10px;
-    font-size: 40px;
-    color: aliceblue;
-    padding-left: 100px;
-    p{
-        font-size: 30px;
-        margin: 0 2px;
-       
-        border-radius: 5px;
-        
-       
-    }
 
-}
-.showFlagConter{
-    position: absolute;
-    transition:  2s  all ease 5s;
-    bottom: 140px;
-    right: 240px;
-    background-color: rgb(97, 47, 47);
-    width: 200px;
-    height: 150px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: black 0px 0px 20px;
-    border-radius: 10px;
-    font-size: 40px;
-    z-index: 100;
-    img{
-        transition: all ease 1s;
-    }
-   
-}
-.notShowFlagConter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    position: absolute;
-    width: 200px;
-    height: 150px;
-    bottom: -1300px;
-    right: 240px;
-    transition:  1s  all ease 1s;
-    z-index: 101;
-}
 
-.iranFlagPicture{
-    width: 60px;
-    height: 40px;
-    margin: 0px 5px;
-    
-}
+
+
+
+
+
+
+
+
 
 
