--- a/src/Components/GetUserInfo/get/user-style.scss
+++ b/src/Components/GetUserInfo/get/user-style.scss
@@ -1,14 +1,11 @@
 .GetUserInfo-Container{
-    direction: rtl;
-   
+    direction: ltr;
+    font-family: 'wink';
     position: absolute;
     background-color: rgba(92, 56, 56, 0.897);
     width: 100%;
-    min-height: 670px;
+    height: 100%;
     margin: auto;
-    
-    
-    
     z-index: 5;
     display: flex;
     flex-direction: column;
@@ -16,31 +13,27 @@
     justify-content: flex-start;
     
 
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
-    margin-right: auto; 
-
+   
 
 
 
 
 }
-@media only screen and (max-width: 1200px) and (min-width: 500px)  {
-    .GetUserInfo-Container{
-        background-color: rgba(92, 56, 56, 0.842);
+// @media only screen and (max-width: 1200px) and (min-width: 500px)  {
+//     .GetUserInfo-Container{
+//         background-color: rgba(255, 0, 0, 0.842);
         
        
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.616);
-        left: 0; 
-        right: 0; 
-        margin-left: auto; 
-        margin-right: auto; 
+//         box-shadow: 0 0 15px rgba(0, 0, 0, 0.616);
+//         left: 0; 
+//         right: 0; 
+//         margin-left: auto; 
+//         margin-right: auto; 
         
 
-    }
+//     }
    
-}
+// }
 .required-info-Container{
     width: 100%;
     height: 100px;
@@ -55,15 +48,16 @@
         padding-bottom: 10px;
         text-shadow: 0 0 10px yellow;
         font-weight:900;
+        font-size: 1.9rem;
 
     }
     p{
         text-align: center;
         padding: 0.3 rem;
-        font-size: 13px;
+        font-size: 1.5rem;
         color: white;
         width: 80%;
-        text-shadow: 0 0 10px yellow;
+        
     }
 }
 
@@ -89,8 +83,8 @@ input{
 }
 
 ::placeholder{
-    font-family: 'iranS';
-    font-size: 12px;
+    
+    font-size: 17px;
     
   
 }
@@ -98,14 +92,14 @@ input{
 }
 .cityNamePicker-Container{
     width: 90%;
-    margin-top: 25px;
-    
+   
+  
     span.forEnter{
        
         display: block;
         text-align: center;
-        font-size: .9rem;
-      margin-top: 19px;
+        font-size: 1.2rem;
+     
         color: aliceblue;
         text-shadow: 0 0 10px yellow;
          
@@ -116,20 +110,31 @@ input{
         justify-content: space-around;
         align-items: center;
         flex-wrap: wrap;
-        flex-basis: auto;
+       
+        margin: auto;
+        width: 70%;
+      min-height: 400px;
         
        
-        .City-Cells{
-            background-color: rgba(235, 34, 34, 0.815);
+        .City-Cellss{
+           
             cursor: pointer;
             border-radius: 4px;
-            width: 100px;
-            height: 50px;
-            margin-top: 10px;
+          min-height: 60px;
+          min-width: 100px;
+           
             text-align: center;
-            font-size: 13px;
-            font-family: 'iranS';
-            text-shadow: 0 0 10px yellow;
+            font-size: 1.4rem;
+            color: #fff;
+            padding: 3px 5px;
+            text-align: center;
+            background-color: rgb(53, 32, 32);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            box-shadow: black 0px 0px 7px;
+           
             
         }
 
@@ -140,29 +145,28 @@ input{
     }
     .CityPickedDisplay-container{
        
-        min-height: 50px;
+      
         text-align: center;
-        margin-top: 10px;
+     max-height: 100px;
+        
         span.cityInfo{
             display: block;
-            font-size: 12px;
+            font-size: 1.8rem;
             font-weight: 900;
-            margin-top: 2px;
-            margin-bottom: 5px;
+            
+           
             color: aliceblue;
-            text-shadow: 0 0 10px yellow;
+            
           
             
-            @keyframes cityAnima {
-                from {color: rgb(255, 255, 0);text-shadow: 0 0 5px black;}
-                to {color: rgb(0, 0, 0);font-size: 10px;}
-            }
+          
 
         }
         span.Cityselected{ 
-            font-size: 15px;
+            font-size: 1.8rem;
             font-weight: 900;
             color: yellow;
+            letter-spacing: 3px;
 
         }
     }
@@ -176,15 +180,15 @@ input{
 
 text-align: center;
 
-font-family: 'iranS';
+
 
 .sendBtn {
-    font-size: 12px !important;
+    font-size: 1.4rem;
     font-weight: 800;
     span{
         display: block;
         font-size: 12px;
-        direction: rtl
+        direction: ltr;
         
 
     }
@@ -197,16 +201,15 @@ font-family: 'iranS';
 //set media for ipad size screen
 @media only screen and (max-width: 1200px)   {
    
-    #City-Cells{
-        background-color: rgb(255, 65, 65);
+    .City-Cellss{
+        background-color: rgb(48, 30, 30);
         width: 70px;
-        height: 30px;
-        
+        height: 50px;
+        padding: 5px;
         font-size: 9px;
-        color: aliceblue;
+        color: rgb(0, 0, 0);
         font-weight:900;
-       display: flex;
-       justify-content: center;
-       align-items: center;
+       
+       
     }
 }
