--- a/src/Components/Header/header-style.scss
+++ b/src/Components/Header/header-style.scss
@@ -1,10 +1,11 @@
 .main-container{
     width: 100%;
-    height: 3.5rem;
-    background-color: rgb(15, 9, 43);
+    height:70px;
+    background-color: rgb(53, 32, 32);
     display: flex;
     justify-content:space-around ;
     align-items: center;
+    font-family: 'wink';
    
   
   
@@ -28,8 +29,8 @@
        
         margin: 0%;
         margin-top: -10px;
-        font-size: .75rem;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 1.3rem;
+       
 
     }
 
