--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,17 @@ body {
  
 
 } */
+@font-face {
+  font-family: 'wink';
+  src: url('../src//Fonts//Winks.ttf');
+}
 html, body {
   height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
   content-visibility: auto;
+  font-family: 'wink';
 }
 
 
